--- a/newest-portfolio-app/package.json
+++ b/newest-portfolio-app/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "clsx": "^2.1.1",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
